# keera-agent

./: .env.desktop  .env.example  .gitignore  .test-task-172.md  CLAUDE.md  DESKTOP_POC.md  README.md  artisan  desktop.py  node_modules  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js  vite.config.ts
.claude/: settings.json  settings.json.bak
.github/workflows/: ci.yml
app/: heartbeat.py  tasks.py
app/actions/: agent_create_action.py  agent_message_send_action.py  claude_hook_action.py  claude_setup_action.py  mcp_setting_write_action.py  seed_builtin_templates_action.py  sync_global_templates_action.py  terminal_write_action.py
app/ai/: chat_agent.py
app/console/: claude_hook_command.py  mcp_sync_command.py  queue_schedule_command.py  queue_work_command.py  seed_templates_command.py
app/constant/: agent_types.py  complexity.py  templates.py
app/controllers/: agent_controller.py  agent_default_controller.py  agent_dispatch_controller.py  agent_message_controller.py  agent_permission_controller.py  agent_relay_controller.py  agent_template_controller.py  agent_trigger_controller.py  ai_controller.py  broadcast_poc_controller.py  broadcasting_controller.py  claude_hook_controller.py  command_controller.py  configurations_page_controller.py  dashboard_controller.py  default_permission_controller.py  global_settings_controller.py  heartbeat_controller.py  home_controller.py  permission_controller.py  plugin_controller.py  poc_controller.py  (+7 more)
bootstrap/: application.py
config/: database.py  fastapi.py  queue.py  storage.py
docs/: hiring-signal-feature-engineering.md  plugin-system.md
plugins/: __init__.py
providers/: app_provider.py  plugin_provider.py  terminal_provider.py
routes/: api.py  web.py
storage/: default_permissions.json  global_settings.json
tests/: test_agents.py  test_case.py  test_claude_hook_action.py  test_claude_setup_action.py  test_complexity.py  test_hook_setup.py  test_mcp_framework.py  test_mcp_integration.py  test_mcp_json_writer.py  test_mcp_setting_write_action.py  test_plan_mode_command.py  test_projects.py  test_terminal_write_action.py  test_terminal_write_input.py  test_tool_gating_command.py
(+258 files in other folders)
