[project]
name = "keera-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-startkit[database,fastapi,sqlite,vite]>=0.42.0",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
# Proof-of-concept native desktop shell (desktop.py). Kept optional so the
# default install is unaffected: install with `uv sync --extra desktop`.
desktop = [
    "pywebview>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
