[project]
name = "keera-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-startkit[database,fastapi,sqlite,vite]>=0.45.0",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "dumpdie>=1.5.0",
    "pyinstaller>=6.21.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    # Proof-of-concept native desktop shell (desktop.py). Dev-only so it never
    # ships in the runtime dependency set.
    "pywebview>=5.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["dist", "dist-app", "storage"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# The formatter enforces line length for code; E501 only flags long string
# literals and comments it deliberately leaves intact, so we don't gate on it.
ignore = ["E501"]
